--- a/source/_posts/标准光照模型.md
+++ b/source/_posts/标准光照模型.md
@@ -76,6 +76,20 @@ c_{specular} = (c_{light} \cdot m_{specular})\max(0,n \cdot h)^{m_{gloss}}
 $$
 在硬件实现时，如果摄像机和光源距离模型足够远的话，Blinn莫惺惺相惜会快于Phong模型，这是因为，此时可以认为$v$和$I$都是定值，因此$h$将是一个常量。但是，当$v$或者$I$不是定值时，Phong模型可能反而更快一些。需要注意的是，这两种光照模型都是经验模型，也就是说，我们不应该认为Blinn模型是对“正确的”Phong模型的近似。实际上，在一些情况下，Blinn模型更符合实验结果。
 
+### 半兰伯特模型 ###
+
+广义的半兰伯特光照模型的公式如下：
+$$
+c_{diffuse} = (c_{light} \cdot m_{diffuse})(\alpha(n \cdot l) + \beta)
+$$
+可以看出，与原兰伯特模型相比，半兰伯特光照模型没有使用 $\max$ 操作来防止$n$和$I$的点积为负值，而是对其结果进行了一个$\alpha$倍的缩放再加上一个$\beta$大小的偏移。绝大多数情况下，$\alpha$和$\beta$的值均为0.5，即公式为：
+$$
+c_{diffuse} = (c_{light} \cdot m_{diffuse})(0.5(n \cdot l) + 0.5)
+$$
+通过这样的方式，我们可以把 $n \cdot l$ 的结果范围从[-1, 1]映射到[0, 1]范围内。也就是说，对于模型的背光面，在原兰伯特光照模型中点积结果将映射到同一个值，即0值处；而在半兰伯特模型中，背光面也可以有明暗变化，不同的点积结果会映射到不同的值上。
+
+需要注意的是，半兰伯特是没有任何物理依据的，它仅仅是一个视觉加强技术。
+
 ## 逐像素还是逐顶点 ##
 
 上面，我们给出了基本光照模型使用的数学公式，那么我们在哪里计算这些光照模型呢？通常来讲，我们有两种选择：在片元着色器中计算，也被称为**逐像素光照(per-pixel lighting)**;在顶点着色器中计算，也被称为**逐顶点光照(per-vertex lighting)**。
