--- a/source/_posts/标准光照模型.md
+++ b/source/_posts/标准光照模型.md
@@ -74,7 +74,7 @@ $$
 $$
 c_{specular} = (c_{light} \cdot m_{specular})\max(0,n \cdot h)^{m_{gloss}}
 $$
-在硬件实现时，如果摄像机和光源距离模型足够远的话，Blinn莫惺惺相惜会快于Phong模型，这是因为，此时可以认为$v$和$I$都是定值，因此$h$将是一个常量。但是，当$v$或者$I$不是定值时，Phong模型可能反而更快一些。需要注意的是，这两种光照模型都是经验模型，也就是说，我们不应该认为Blinn模型是对“正确的”Phong模型的近似。实际上，在一些情况下，Blinn模型更符合实验结果。
+在硬件实现时，如果摄像机和光源距离模型足够远的话，Blinn模型会快于Phong模型，这是因为，此时可以认为$v$和$I$都是定值，因此$h$将是一个常量。但是，当$v$或者$I$不是定值时，Phong模型可能反而更快一些。需要注意的是，这两种光照模型都是经验模型，也就是说，我们不应该认为Blinn模型是对“正确的”Phong模型的近似。实际上，在一些情况下，Blinn模型更符合实验结果。
 
 ### 半兰伯特模型 ###
 
