基础纹理(一)

--- a/source/_posts/标准光照模型.md
+++ b/source/_posts/标准光照模型.md
@@ -97,3 +97,6 @@ $$
 在逐像素光照中，我们会以每个像素为基础，得到它的法线(可以是对顶点法线插值得到的，也可以是从法线纹理中采样得到的)，然后进行光照模型的计算。这种在面片之间对顶点法线进行插值的技术被称为**Phong着色(Phong shading)**，也被称为Phong插值或法线插值着色技术。这不同于我们之前讲到的Phong光照模型。
 
 与之相对的是逐顶点光照，也被称为**高洛徳着色(Gouraud shading)**。在逐顶点光照中，我们在每个顶点上计算光照，然后会在渲染图元内部进行线性插值，最后输出成像素颜色。由于顶点数目往往小于像素数目，因此，逐顶点光照的计算量往往要小于像素数目。但是，由于逐顶点光照依赖于线性插值来得到像素光照，因此，当光照模型中有非线性的计算(例如计算高光反射时)时，逐顶点光照就会出现问题。而且，由于逐顶点光照会在渲染图元内部对顶点颜色进行插值，这会导致渲染图元内部的颜色总是暗于顶点处的最高颜色值，这在某些情况下会产生明显的棱角现象。
+
+## 参考 ##
+《Unity Shader入门精要》
