--- a/source/_posts/标准光照模型.md
+++ b/source/_posts/标准光照模型.md
@@ -80,11 +80,11 @@ $$
 
 广义的半兰伯特光照模型的公式如下：
 $$
-c_{diffuse} = (c_{light} \cdot m_{diffuse})(\alpha(n \cdot l) + \beta)
+c_{diffuse} = (c_{light} \cdot m_{diffuse})(\alpha(n \cdot I) + \beta)
 $$
 可以看出，与原兰伯特模型相比，半兰伯特光照模型没有使用 $\max$ 操作来防止$n$和$I$的点积为负值，而是对其结果进行了一个$\alpha$倍的缩放再加上一个$\beta$大小的偏移。绝大多数情况下，$\alpha$和$\beta$的值均为0.5，即公式为：
 $$
-c_{diffuse} = (c_{light} \cdot m_{diffuse})(0.5(n \cdot l) + 0.5)
+c_{diffuse} = (c_{light} \cdot m_{diffuse})(0.5(n \cdot I) + 0.5)
 $$
 通过这样的方式，我们可以把 $n \cdot l$ 的结果范围从[-1, 1]映射到[0, 1]范围内。也就是说，对于模型的背光面，在原兰伯特光照模型中点积结果将映射到同一个值，即0值处；而在半兰伯特模型中，背光面也可以有明暗变化，不同的点积结果会映射到不同的值上。
 
