--- a/source/_posts/透明效果(一).md
+++ b/source/_posts/透明效果(一).md
@@ -45,5 +45,59 @@ categories: Unity Shader
 
 * 第二种情况，我们先渲染 A，再渲染 B。那么 A 会先写入颜色缓冲，随后 B 会和颜色缓冲中的 A 进行混合，这样混合结果会完全反过来，看起来就好像 B 在 A 的前面，得到的就是错误的半透明结构。
 
-从这个例子可以看出，半透明物体之间也是要符合一定的渲染顺序的。
+从这个例子可以看出，半透明物体之间也是要符合一定的渲染顺序的。基于这两点，渲染引擎一般都会先对物体进行排序，再渲染。常用的方法是。
 
+1. 先渲染所有不透明物体，并开启它们的深度测试和深度写入。
+   
+2. 把半透明物体按他们距离摄像机的远近进行排序，然后按照从后往前的顺序渲染这些半透明物体，并开启它们的深度测试，但关闭深度写入。
+
+但现在问题仍然没有完全解决，在一些情况下，半透明物体的渲染还是会出现问题。这是因为第二步中的渲染顺序仍然含糊不清，若距离摄像机的远近是由距离摄像机的深度值决定的，但深度缓冲中的值都是像素级别的，每个像素都有一个深度值，如果我们现在对单个物体级别进行排序，那么这意味着排序结果是：要么物体 A 全部在 B 前面渲染，要么 A 全部在 B 后面渲染。但如果存在循环重叠的情况，那么使用这种方法就永远无法得到正确的结果。下图给出了 3 个物体循环重叠的情况。
+
+![三个物体循环重叠](/posts_image/Transparent/Transparent_3.png "三个物体循环重叠")
+
+在上图中，由于 3 个物体互相重叠，我们不能得到一个正确的排序顺序。这种时候，我们可以选择把物体拆分为两个部分，然后在进行正确的排序。但即便我们通过分割的方法解决了循环覆盖的问题，还是会有其他情况发生，比如下图中的情况。
+
+![两个物体错位遮挡](/posts_image/Transparent/Transparent_4.png "两个物体错位遮挡")
+
+这里的问题是：如何进行排序？我们知道，一个物体的网格结构往往占据了空间中的某一块区域，也就是说，这个网格上每一个点的深度值可能都是不一样的。我们无论选择网格中点、最远的点还是最近的点的深度值来作为整个物体的深度值和其他物体进行排序，都会得到错误的结果。我们的排序结果总是 A 在 B 的前面，但实际上 A 有一部分被 B 遮挡了。这也意味着，一旦选定了一种判断方式后，在某些情况下半透明物体之间一定会出现错误的遮挡问题。这种问题的解决方法通常也是分割网格。
+
+尽管这样做总会出现一些意外情况，但由于上述方法足够有效且容易实现，因此大多数游戏引擎都使用了这种方法。为了减少错误排序的情况，我们可以尽可能让模型是凸面体，并且考虑将复杂模型拆分成可以独立排序的多个子模型等。其实就算排序错误结果有时也不会非常糟糕，如果不想分割网格，可以试着让透明通道更加柔和，使穿插看起来不是那么明显。我们也可以使用开启了深度写入的半透明效果来近似模拟物体的半透明。
+
+下面我们来看一下 Unity 如何解决排序问题。
+
+## Unity Shader 的渲染顺序 ##
+
+Unity 为了解决渲染顺序的问题提供了**渲染队列(render queue)**这一解决方案。我们可以使用 SubShader 的 Queue 标签来决定我们的模型将归于哪个渲染队列。Unity 在内部使用一系列整数索引来表示每个渲染队列，且索引号越小表示越早被渲染。
+
+|    名称     | 队列索引号 | 描述                                                                                                                                                               |
+| :---------: | :--------: | :----------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Background  |    1000    | 这个渲染队列会在任何其他队列之前被渲染，我们通常使用该队列来渲染那些需要绘制在背景上的物体                                                                         |
+|  Geometry   |    2000    | 默认的渲染队列，大多数物体都使用这个队列。不透明物体使用这个队列                                                                                                   |
+|  AlphaTest  |    2450    | 需要透明度测试的物体使用这个队列。在 Unity5 中从 Geometry 队列中被单独分离出来，这是因为在所有不透明物体渲染之后再渲染它们会更加高效                               |
+| Transparent |    3000    | 这个队列中的物体会在所有 Geometry 和 AlphaTest 物体渲染后，再按**从后往前**的顺序进行渲染。任何使用了透明度混合(例如关闭了深度写入的 Shader)的物体都应该使用该队列 |
+|   Overlay   |    4000    | 该队列用于实现一些叠加效果。任何需要在最后渲染的物体都应该使用该队列                                                                                               |
+
+因此，如果我们想要通过透明度测试实现透明效果，代码中应该包含类似下面的代码：
+
+```shaderlab
+SubShader {
+    Tags { "Queue" = "AlphaTest" }
+    Pass {
+        ...
+    }
+}
+```
+
+如果我们想要通过透明度混合来实现透明效果，代码中应该包含类似下面的代码：
+
+```shaderlab
+SubShader {
+    Tags { "Queue" = "Transparent" }
+    Pass {
+        ZWrite Off
+        ...
+    }
+}
+```
+
+其中，**ZWrite Off**用于关闭深度写入，在这里我们选择把它写在 Pass 中。我们也可以把它写在 SubShader 中，这意味着该 SubShader 下所有 Pass 都会关闭深度写入。
