--- a/source/_posts/透明效果(一).md
+++ b/source/_posts/透明效果(一).md
@@ -101,3 +101,114 @@ SubShader {
 ```
 
 其中，**ZWrite Off**用于关闭深度写入，在这里我们选择把它写在 Pass 中。我们也可以把它写在 SubShader 中，这意味着该 SubShader 下所有 Pass 都会关闭深度写入。
+
+## 透明度测试 ##
+
+**透明度测试**：只要一个片元的透明度不满足条件(通常是小于某个阈值)，那么它对应的片元就会被舍弃。被舍弃的片元将不会再进行任何处理，也不会对颜色缓冲产生任何影响；否则，就会按照普通的不透明的物体的处理方式来处理它。
+
+通常我们会在片元着色器中使用 clip 函数来进行透明度测试。clip 是 CG 中的一个函数，它的定义如下。
+
+**函数**：void clip(float4 x); void clip(float3 x); void clip(float2 x); void clip(float1 x); void clip(float x);
+
+**参数**：裁剪时使用的标量或矢量条件。
+
+**描述**：如果给定参数的任何一个分量是负数，就会舍弃当前像素的输出颜色。它等同于下面的代码：
+
+```shaderlab
+void clip(float4 x){
+    if(any(x < 0))
+        discard;
+}
+```
+我们将用下面这张图来实现透明度测试。
+
+![透明度测试用图](/posts_image/Transparent/Transparent_5.png "透明度测试用图")
+
+```shaderlab
+// Upgrade NOTE: replaced '_Object2World' with 'unity_ObjectToWorld'
+
+Shader "Custom/Chapter8/Chapter8-AlphaTest"
+{
+    Properties
+    {
+        _Color ("Main Tint", Color) = (1,1,1,1)
+        _MainTex ("Main Tex", 2D) = "white" {}
+        _Cutoff ("Alpha Cutoff", Range(0, 1)) = 0.5
+    }
+    SubShader
+    {
+        Tags { "Queue"="AlphaTest" "IgnoreProhector"="True" "RenderType"="TransparentCutout" }
+        
+        Pass {
+            Tags { "LightMode" = "ForwardBase" }
+
+            CGPROGRAM
+
+            #pragma vertex vert
+            #pragma fragment frag
+
+            #include "Lighting.cginc"
+
+            fixed4 _Color;
+            sampler2D _MainTex;
+            float4 _MainTex_ST;
+            fixed _Cutoff;
+
+            struct a2v {
+                float4 vertex : POSITION;
+                float3 normal : NORMAL;
+                float4 texcoord : TEXCOORD0;
+            };
+
+            struct v2f {
+                float4 pos : SV_POSITION;
+                float3 worldNormal : TEXCOORD0;
+                float3 worldPos : TEXCOORD1;
+                float2 uv : TEXCOORD2;
+            };
+
+            v2f vert(a2v v){
+                v2f o;
+                o.pos = UnityObjectToClipPos(v.vertex);
+                o.worldNormal = UnityObjectToWorldNormal(v.normal);
+                o.worldPos = mul(unity_ObjectToWorld, v.vertex).xyz;
+                o.uv = TRANSFORM_TEX(v.texcoord, _MainTex);
+                return o;
+            }
+
+            fixed4 frag(v2f i) : SV_Target{
+                fixed3 worldNormal = normalize(i.worldNormal);
+                fixed3 worldLightDir = normalize(UnityWorldSpaceLightDir(i.worldPos));
+                fixed4 texColor = tex2D(_MainTex, i.uv);
+
+                clip(texColor.a - _Cutoff);
+                //Equal to
+                //if((texColor.a - _Cutoff) < 0.0){
+                //  discard;
+                //}
+                fixed3 albedo = texColor.rgb * _Color.rgb;
+                fixed3 ambient = UNITY_LIGHTMODEL_AMBIENT.xyz * albedo;
+                fixed3 diffuse = _LightColor0.rgb * albedo * max(0, dot(worldNormal, worldLightDir));
+                return fixed4(ambient + diffuse, 1.0);
+            }
+
+            ENDCG
+        }
+    }
+    FallBack "Transparent/Cutout/VertexLit"
+}
+```
+
+效果如下图所示：
+
+![透明度测试效果图1](/posts_image/Transparent/Transparent_6.png "透明度测试效果图1")
+
+Unity 中透明度测试使用的渲染队列是名为 AlphaTest 的队列，因此我们需要把 Queue 标签设置成 AlphaTest。而 RenderType 标签可以让 Unity 把这个 Shader 归入到提前定义的组(这里就是 TransparentCutout 组)中，以指明该 Shader 是一个使用了透明度测试的 Shader。RenderType 标签通常被用于着色器替换功能。我们还把 IgnoreProjector 设置为 True，这意味着这个 Shader 不会受到投影器(Projectors)的影响。通常，使用了透明度测试的 Shader 都应该在 SubShader 中设置这三个标签。
+
+前面我们已经提到过 clip 函数的定义，它会判断它的参数，即 texColor.a - _Cutoff 是否为负数，如果是就会舍弃该片元的输出。也就是说，当 texColor.a 小于材质参数 _Cutoff 时，该片元就会产生完全透明的效果。使用 clip 函数等同于先判断参数是否小于零，如果是就使用 discard 指令来显示剔除该片元。材质面板中的 Alpha cutoff 参数用于调整透明度测试时使用的阈值，当纹理像素的透明度小于该值时，对应的片元就会被舍弃。当我们逐渐调大该值时，立方体上的网格会逐渐消失。如下图所示。
+
+![透明度测试效果图2](/posts_image/Transparent/Transparent_7.png "透明度测试效果图2")
+
+和之前使用的 Diffuse 和 Specular 不同，这次我们使用内置的 Transparent/Cutout/VertexLit 来作为回调 Shader。这不仅能够保证在我们编写的 SubShader 无法在当前显卡上工作时可以有合适的代替 Shader，还可以保证使用透明度测试的物体可以正确地向其他物体投射阴影。
+
+从上边的图可以看出，透明度测试得到的透明效果很“极端”——要么完全透明，要么完全不透明，它的效果往往像在一个不透明物体上挖了一个空洞。而且，得到的透明效果往往在边缘处参差不齐，有锯齿，这是因为在边界处纹理的透明度的变化精度问题。为了得到更加柔滑的透明效果，就可以使用透明度混合。
