透明效果补充

--- a/source/_posts/透明效果(一).md
+++ b/source/_posts/透明效果(一).md
@@ -3,6 +3,7 @@ title: 透明效果(一)
 date: 2022-01-25 22:26:13
 tags: Alpha
 categories: Unity Shader
+math: true
 ---
 
 ## 透明效果 ##
@@ -120,6 +121,7 @@ void clip(float4 x){
         discard;
 }
 ```
+
 我们将用下面这张图来实现透明度测试。
 
 ![透明度测试用图](/posts_image/Transparent/Transparent_5.png "透明度测试用图")
@@ -212,3 +214,101 @@ Unity 中透明度测试使用的渲染队列是名为 AlphaTest 的队列，因
 和之前使用的 Diffuse 和 Specular 不同，这次我们使用内置的 Transparent/Cutout/VertexLit 来作为回调 Shader。这不仅能够保证在我们编写的 SubShader 无法在当前显卡上工作时可以有合适的代替 Shader，还可以保证使用透明度测试的物体可以正确地向其他物体投射阴影。
 
 从上边的图可以看出，透明度测试得到的透明效果很“极端”——要么完全透明，要么完全不透明，它的效果往往像在一个不透明物体上挖了一个空洞。而且，得到的透明效果往往在边缘处参差不齐，有锯齿，这是因为在边界处纹理的透明度的变化精度问题。为了得到更加柔滑的透明效果，就可以使用透明度混合。
+
+## 透明度混合 ##
+
+**透明度混合**：这种方法可以得到真正的半透明效果。它会使用当前片元的透明度作为混合因子，与已经存储在颜色缓冲中的颜色值进行混合，得到新的颜色。但是，透明度混合需要关闭深度写入，这使得我们要非常小心物体的渲染顺序。
+
+为了进行混合，我们需要使用 Unity 提供的混合命令——Blend。Blend 是 Unity 提供的设置混合模式的命令。想要实现半透明的效果就需要把当前自身的颜色和已经存在于颜色缓冲中的颜色值进行混合，混合时使用的函数就是由该指令决定的。下表给出了 Blend 命令的语义。
+
+| 语义                                             | 描述                                                                                                                                                       |
+| :----------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Blend Off                                        | 关闭混合                                                                                                                                                   |
+| Blend SrcFactor DstFactor                        | 开启混合，并设置混合因子。源颜色(该片元产生的颜色)会乘以 SrcFactor，而目标颜色(已经存在于颜色缓存的颜色)会乘以 DstFactor，然后把两者相加后在存入颜色缓冲中 |
+| Blend SrcFactor DstFactor, SrcFactorA DstFactorA | 和上面几乎一样，只是使用不同的因子来混合透明通道                                                                                                           |
+| BlendOp BlendOperation                           | 并非是把源颜色和目标颜色简单相加后混合，而是使用 BlendOperation 对它们进行其他操作                                                                         |
+
+我们下面会使用 Blend SrcFactor DstFactor 来进行混合，这个命令在设置混合因子的同时也开启了混合模式。这是因为开启了混合之后，设置片元的透明通道才有意义，而 Unity 在我们使用 Blend 命令的时候就自动帮我们打开了。我们会把源颜色的混合因子 SrcFactor 设为 SrcAlpha，而目标颜色的混合因子 DstFactor 设为 OneMinusSrcAlpha。这意味着，经过混合后新的颜色是：
+$$
+DstColor_{new} = SrcAlpha \times SrcColor + (1 - SrcAlpha) \times DstColor_{old}
+$$
+我们仍然使用透明度测试用的纹理图。
+
+```shaderlab
+Shader "Custom/Chapter8/Chapter8-AlphaBlend"
+{
+    Properties
+    {
+        _Color ("Main Tint", Color) = (1,1,1,1)
+        _MainTex ("Main Tex", 2D) = "white" {}
+        _AlphaScale ("Alpha Scale", Range(0, 1)) = 1
+    }
+    SubShader
+    {
+        Tags { "Queue"="Transparent" "IgnoreProhector"="True" "RenderType"="Transparent" }
+        
+        Pass {
+            Tags { "LightMode" = "ForwardBase" }
+            ZWrite Off
+            Blend SrcAlpha OneMinusSrcAlpha
+
+            CGPROGRAM
+
+            #pragma vertex vert
+            #pragma fragment frag
+
+            #include "Lighting.cginc"
+
+            fixed4 _Color;
+            sampler2D _MainTex;
+            float4 _MainTex_ST;
+            fixed _AlphaScale;
+
+            struct a2v {
+                float4 vertex : POSITION;
+                float3 normal : NORMAL;
+                float4 texcoord : TEXCOORD0;
+            };
+
+            struct v2f {
+                float4 pos : SV_POSITION;
+                float3 worldNormal : TEXCOORD0;
+                float3 worldPos : TEXCOORD1;
+                float2 uv : TEXCOORD2;
+            };
+
+            v2f vert(a2v v){
+                v2f o;
+                o.pos = UnityObjectToClipPos(v.vertex);
+                o.worldNormal = UnityObjectToWorldNormal(v.normal);
+                o.worldPos = mul(unity_ObjectToWorld, v.vertex).xyz;
+                o.uv = TRANSFORM_TEX(v.texcoord, _MainTex);
+                return o;
+            }
+
+            fixed4 frag(v2f i) : SV_Target{
+                fixed3 worldNormal = normalize(i.worldNormal);
+                fixed3 worldLightDir = normalize(UnityWorldSpaceLightDir(i.worldPos));
+                fixed4 texColor = tex2D(_MainTex, i.uv);
+                fixed3 albedo = texColor.rgb * _Color.rgb;
+                fixed3 ambient = UNITY_LIGHTMODEL_AMBIENT.xyz * albedo;
+                fixed3 diffuse = _LightColor0.rgb * albedo * max(0, dot(worldNormal, worldLightDir));
+                return fixed4(ambient + diffuse, texColor.a * _AlphaScale);
+            }
+
+            ENDCG
+        }
+    }
+    FallBack "Transparent/VertexLit"
+}
+```
+
+效果如下图所示，我们可以调节材质面板上的 Alpha Scale 参数，以控制整体透明度。
+
+![透明度混合效果图1](/posts_image/Transparent/Transparent_8.png "透明度混合效果图1")
+
+我们在前面解释了由于关闭深度写入带来的各种问题。当模型本身有复杂的遮挡关系或是包含了复杂的非凸网格的时候，就会有各种各样因为排序错误而产生的错误的透明效果。下图给出了使用上面的 Unity Shader 渲染的有复杂遮挡关系模型的效果。
+
+![透明度混合效果图2](/posts_image/Transparent/Transparent_9.png "透明度混合效果图2")
+
+这都是由于我们关闭了深度写入造成的，因为这样我们无法对模型进行像素级别的深度排序。前面我们提到了一种解决方法是分割网格，从而得到一个“质量优等”的网格。但是很多情况下这往往是不切实际的。这时，我们可以想办法重新利用深度写入，让模型可以像半透明物体一样进行淡入淡出。这就是开启深度写入的半透明效果。
