透明效果二

--- a/source/_posts/透明效果(一).md
+++ b/source/_posts/透明效果(一).md
@@ -312,3 +312,6 @@ Shader "Custom/Chapter8/Chapter8-AlphaBlend"
 ![透明度混合效果图2](/posts_image/Transparent/Transparent_9.png "透明度混合效果图2")
 
 这都是由于我们关闭了深度写入造成的，因为这样我们无法对模型进行像素级别的深度排序。前面我们提到了一种解决方法是分割网格，从而得到一个“质量优等”的网格。但是很多情况下这往往是不切实际的。这时，我们可以想办法重新利用深度写入，让模型可以像半透明物体一样进行淡入淡出。这就是开启深度写入的半透明效果。
+
+## 参考 ##
+《Unity Shader入门精要》
