--- a/source/_posts/透明效果(二).md
+++ b/source/_posts/透明效果(二).md
@@ -363,3 +363,6 @@ Shader "Custom/Chapter8/Chapter8-AlphaBlendBothSided"
 通过上面的代码，我们可以得到下图中的效果：
 
 ![透明度混合的双面渲染](/posts_image/Transparent/Transparent_13.png "透明度混合的双面渲染")
+
+## 参考 ##
+《Unity Shader入门精要》
