--- a/source/_posts/高级纹理(二).md
+++ b/source/_posts/高级纹理(二).md
@@ -219,3 +219,163 @@ _MainTex 是该玻璃的材质纹理；_BumpMap 是玻璃的法线纹理；_Cube
 但从效率上来讲，使用渲染纹理的效率往往要好于 GrabPass，尤其在移动设备上。使用渲染纹理我们可以自定义渲染纹理的大小，尽管这种方法需要把部分场景再次渲染一遍，但我们可以通过调整摄像机的渲染层来减少二次渲染时的场景大小，或使用其他方法来控制摄像机是否需要开启。而使用 GrabPass 获取到的图像分辨率和显示屏幕是一致的，这意味着在一些高分辨率的设备上可能会造成严重的带宽影响。而且在移动设备上，GrabPass 虽然不会重新渲染场景，但它往往需要 CPU 直接读取后备缓冲（back buffer）中的数据，破坏了 CPU 和 GPU 之间的并行性，这是比较耗时的，甚至在一些移动设备上这是不支持的。
 
 Unity 引入了**命令缓冲（Command Buffers）**来允许我们扩展 Unity 的渲染流水线。使用命令缓冲我们也可以得到类似抓屏的效果，它可以在不透明物体渲染后把当前的图像复制到一个临时的渲染目标纹理中，然后在那里进行一些额外的操作，例如模糊等等，最后把图像传递给需要使用它的物体进行处理和显示。除此之外，命令缓冲还允许我们实习很多特殊的效果，我们可以在 Unity 官方手册中的**图像命令缓冲**一文（https://docs.unity.cn/cn/2021.2/Manual/GraphicsCommandBuffers.html）中找到更多内容。
+
+## 程序纹理 ##
+
+**程序纹理（Procedural Texture）**指的是那些由计算机生成的图像，我们通常使用一些特定的算法来创建个性化图案或非常真实的自然元素，例如木头、石子等。使用程序纹理的好处在于我们可以使用各种参数来控制纹理的外观，而这些属性不仅仅是那些颜色属性，甚至可以是完全不同类型的图案属性，这使得我们可以得到更加丰富的动画和视觉效果。
+
+### 在 Unity 中实现简单的程序纹理 ###
+
+```csharp
+using UnityEngine;
+using System.Collections;
+using System.Collections.Generic;
+
+[ExecuteInEditMode]
+public class ProceduralTextureGeneration : MonoBehaviour {
+
+	public Material material = null;
+
+	#region Material properties
+	[SerializeField, SetProperty("textureWidth")]
+	private int m_textureWidth = 512;
+	public int textureWidth {
+		get {
+			return m_textureWidth;
+		}
+		set {
+			m_textureWidth = value;
+			_UpdateMaterial();
+		}
+	}
+
+	[SerializeField, SetProperty("backgroundColor")]
+	private Color m_backgroundColor = Color.white;
+	public Color backgroundColor {
+		get {
+			return m_backgroundColor;
+		}
+		set {
+			m_backgroundColor = value;
+			_UpdateMaterial();
+		}
+	}
+
+	[SerializeField, SetProperty("circleColor")]
+	private Color m_circleColor = Color.yellow;
+	public Color circleColor {
+		get {
+			return m_circleColor;
+		}
+		set {
+			m_circleColor = value;
+			_UpdateMaterial();
+		}
+	}
+
+	[SerializeField, SetProperty("blurFactor")]
+	private float m_blurFactor = 2.0f;
+	public float blurFactor {
+		get {
+			return m_blurFactor;
+		}
+		set {
+			m_blurFactor = value;
+			_UpdateMaterial();
+		}
+	}
+	#endregion
+
+	private Texture2D m_generatedTexture = null;
+
+	// Use this for initialization
+	void Start () {
+		if (material == null) {
+			Renderer renderer = gameObject.GetComponent<Renderer>();
+			if (renderer == null) {
+				Debug.LogWarning("Cannot find a renderer.");
+				return;
+			}
+
+			material = renderer.sharedMaterial;
+		}
+
+		_UpdateMaterial();
+	}
+
+	private void _UpdateMaterial() {
+		if (material != null) {
+			m_generatedTexture = _GenerateProceduralTexture();
+			material.SetTexture("_MainTex", m_generatedTexture);
+		}
+	}
+
+	private Color _MixColor(Color color0, Color color1, float mixFactor) {
+		Color mixColor = Color.white;
+		mixColor.r = Mathf.Lerp(color0.r, color1.r, mixFactor);
+		mixColor.g = Mathf.Lerp(color0.g, color1.g, mixFactor);
+		mixColor.b = Mathf.Lerp(color0.b, color1.b, mixFactor);
+		mixColor.a = Mathf.Lerp(color0.a, color1.a, mixFactor);
+		return mixColor;
+	}
+
+	private Texture2D _GenerateProceduralTexture() {
+		Texture2D proceduralTexture = new Texture2D(textureWidth, textureWidth);
+
+		// The interval between circles
+		float circleInterval = textureWidth / 4.0f;
+		// The radius of circles
+		float radius = textureWidth / 10.0f;
+		// The blur factor
+		float edgeBlur = 1.0f / blurFactor;
+
+		for (int w = 0; w < textureWidth; w++) {
+			for (int h = 0; h < textureWidth; h++) {
+				// Initalize the pixel with background color
+				Color pixel = backgroundColor;
+
+				// Draw nine circles one by one
+				for (int i = 0; i < 3; i++) {
+					for (int j = 0; j < 3; j++) {
+						// Compute the center of current circle
+						Vector2 circleCenter = new Vector2(circleInterval * (i + 1), circleInterval * (j + 1));
+
+						// Compute the distance between the pixel and the center
+						float dist = Vector2.Distance(new Vector2(w, h), circleCenter) - radius;
+
+						// Blur the edge of the circle
+						Color color = _MixColor(circleColor, new Color(pixel.r, pixel.g, pixel.b, 0.0f), Mathf.SmoothStep(0f, 1.0f, dist * edgeBlur));
+
+						// Mix the current color with the previous color
+						pixel = _MixColor(pixel, color, color.a);
+					}
+				}
+
+				proceduralTexture.SetPixel(w, h, pixel);
+			}
+		}
+
+		proceduralTexture.Apply();
+
+		return proceduralTexture;
+	}
+}
+
+```
+
+由于我们生成的纹理是由若干圆点构成的，因此在上面的代码中，我们声明了 4 个纹理属性：纹理的大小，数值通常是 2 的整数幂；纹理的背景颜色；原点的颜色；模糊因子，这个参数是用来模糊边界的。对于每个属性使用了 get/set 方法，为了在面板上修改属性时仍可执行 set 函数，我们使用了一个开源插件 SetProperty（https://github.com/LMNRY/SetProperty/blob/master/Scripts/SetPropertyExample.cs）。这使得我们修改了材质属性时，可以执行 _UpdateMaterial 函数来使用新的属性重新生成程序纹理。
+
+代码首先初始化一张二维纹理，并且提前计算了一些生成纹理时需要的变量。然后，使用了一个两层的嵌套循环遍历纹理中的每个像素，并在纹理上依次绘制 9 个圆形。最后调用 Texture2D.Apply 函数来强制把像素值写入纹理中，并返回该程序纹理。
+
+![程序纹理](/posts_image/Advanced_Texture/Advanced_Texture_15.png "程序纹理")
+
+### Unity 的程序材质 ###
+
+在 Unity 中，有一类专门使用程序纹理的材质，叫做**程序材质（Procedural Materials）**。这类材质和我们之前使用的那些材质本质上是一样的，不同的是，它们使用的纹理不是普通的纹理，而是程序纹理。需要注意的是，程序材质和它使用的程序纹理并不是在 Unity 中创建的，而是使用了一个名为 **Substance Designer** 的软件在 Unity 外部生成的。**Substance Designer** 是一个非常出色的纹理生成工具，很多 3A 的游戏项目都使用了由它生成的材质。这些材质都是以 .sbsar 为后缀的。在 Unity 中需要从官方资源商店或 Package Manager 安装 Substance in Unity 插件，把以 .sbsar 为后缀的文件导入到 Unity 后，Unity 就会生成一个 **程序纹理资源（Procedural Material Asset）**。程序纹理资源可以包含一个或多个程序材质。
+
+![程序纹理资源](/posts_image/Advanced_Texture/Advanced_Texture_16.png "程序纹理资源")
+
+我们可以在程序纹理的面板上看到该材质使用的 Unity Shader 及其属性、生成程序纹理使用的纹理属性、材质预览等信息。
+
+![程序纹理资源效果](/posts_image/Advanced_Texture/Advanced_Texture_17.png "程序纹理资源效果")
+
